Update session tmpl to have semantic tags Update left margin to 17px Remove list item square Fix border colors to light dark mode light blue Work on session form styles and seperate cosmetic style properties Update nav and footer to be slightly darker Fix formatting on session form and layout

--- a/cmd/play-server/static/styles/main.css
+++ b/cmd/play-server/static/styles/main.css
@@ -53,7 +53,7 @@
 }
 .workspace .code-examples ul.examples {
   margin-right: 15px;
-  padding-left: 8px;
+  padding-left: 11px;
 }
 .workspace .code-examples ul.examples li {
   list-style: none;
@@ -64,7 +64,7 @@
   background-color: #526373;
 }
 .workspace .code-examples ul.examples li.current {
-  list-style: square;
+  list-style: none;
   color: #4c5863;
   background-color: #3F4858;
 }
@@ -99,7 +99,7 @@
   margin-right: 0;
   width: 95%;
   height: 60vh;
-  border: 1px solid #888;
+  border: 1px solid #516374;
 }
 .workspace .code-editor input.run {
   border: 0;
@@ -129,8 +129,8 @@
 .workspace .code-output iframe.output {
   width: 95%;
   height: 60vh;
-  border: 1px solid #888;
-  margin-bottom: 40px;
+  border: 1px solid #516374;
+  margin-bottom: 15px;
 }
 
 .sticky {
